# proforma-generator

./: .gitignore  Makefile  README.md  contract_data.json  json_handling.py  main.py  pricing.py  pyproject.toml  requirements.txt  template_generator.py
data/: contract_data.json  cpi.json
src/: billing.py  contract.py  contract_adjustments.py  data_dict.py  json_handling.py  main.py  price_index.py  pricing.py  template_generator.py  utils.py
src/proforma_generator/: billing.py  contract.py  data_dict.py  json_handling.py  main.py  price_index.py  template_generator.py  utils.py
src/proforma_generator/data/: contract_data.json
src/proforma_generator/templates/: index.html  styles.css
src/templates/: index.html  styles.css
templates/: index.html  main.html  styles.css
