[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proforma-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "babel>=2.18.0",
    "jinja2>=3.1.6",
    "requests>=2.33.1",
    "typer>=0.25.1",
    "weasyprint>=68.1",
]

[project.scripts]
progen = "proforma_generator.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proforma_generator = [
    "templates/*.html",
    "templates/*.css",
    "templates/*.png",
    "templates/fonts/*.ttf",
    "templates/fonts/*.otf",
    "data/*.json",
]

